--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </button>
             </div>
             <div class="bg-blue-50 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col h-full">
-                <h3 class="text-xl font-semibold text-blue-700 mb-2">Mobile App Development Development</h3>
+                <h3 class="text-xl font-semibold text-blue-700 mb-2">Mobile App Development</h3>
                 <p class="text-gray-700">Create apps for Android and iOS using Flutter, React Native, Kotlin, or Swift to reach mobile users.</p>
                 <div class="hidden text-gray-700 mt-2" id="mobile-app-details">
                     Mobile developers design apps for Android and iOS platforms using tools like Flutter, React Native, Kotlin, and Swift. With the surge in mobile usage worldwide, skilled app developers are highly sought after in industries like e-commerce, health tech, education, and finance.
