--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <path d="M4.98 3.5C3.34 3.5 2 4.84 2 6.48c0 1.64 1.34 2.98 2.98 2.98s2.98-1.34 2.98-2.98C7.96 4.84 6.62 3.5 4.98 3.5zM2.4 8.9H7.5V21H2.4V8.9zM9.1 8.9h4.8v1.7h.1c.7-1.3 2.3-2.2 3.9-2.2 4.2 0 5 2.8 5 6.3V21H18V15.1c0-1.4 0-3.3-2-3.3s-2.3 1.6-2.3 3.2V21H9.1V8.9z"/>
                 </svg>
             </a>
-            <a href="mathur.suhani324@gmail.com" class="hover:text-gray-300">
+            <a href="mailto:mathur.suhani324@gmail.com" class="hover:text-gray-300">
                 <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm0 12h16V8.83l-8 6.67-8-6.67V18z"/>
                 </svg>
