--- a/index.html
+++ b/index.html
@@ -366,15 +366,13 @@
     <section id="about-me" class="py-16 bg-gradient-to-r from-blue-50 to-white px-6">
         <div class="max-w-5xl mx-auto text-center mb-12" data-aos="fade-down">
             <h2 class="text-4xl font-bold text-blue-800 mb-4">About Me</h2>
-            <p class="text-gray-700 text-lg leading-relaxed">HI! I'm <strong>Suhani Mathur</strong>, a passionate tech enthusiast and aspiring software developer. I created this platform to simplify the journey into IT for students and beginners like myself.</p>
+            <p class="text-gray-700 text-lg leading-relaxed">HI! I'm <strong>Suhani Mathur</strong>, a tech enthusiast and aspiring software developer. I created this platform to make IT learning simple and accessible for students and beginners.</p>
             <p class="text-gray-700 text-lg leading-relaxed mt-6">
-                While exploring a career in tech, I found most websites to be scattered, overloaded with ads, or lacking clear guidance. That's why I built this site - to offer a clean, structured, and beginner-friendly roadmap with free resources, step-by-step learning paths, and interactive quizzes tailored to popular IT fields like Web Development, DevOps, Cloud Computing, AI, Data Science, Mobile App Development, and UI/UX Design.
+                Frustrated by cluttered and confusing resources, I built a clean, ad-free space with clear roadmaps, curated free resources, and interactive quizzes for fields like Web Development, Cloud, AI, Data Science, and more.
             </p>
-            <p class="text-gray-700 text-lg leading-relaxed mt-6">
-                What makes this site different is its focus on <span class="font-semibold text-blue-700">clarity, simplicity, and engagement</span>. Along with curated resources, I’ve included interactive quizzes to help you test your knowledge, track your progress, and stay motivated as you learn.
-            </p>
+            
             <p class="text-gray-700 text-lg leading-relaxed mt-6"> 
-                I believe everyone deserves a fair start in tech, and this platform is my small effort to make that possible — especially for students from small towns or non-CS backgrounds. I hope it helps you. 
+                This is my small effort to help learners—especially from non-CS backgrounds or small towns—start strong in tech.
             </p>
             <p class="text-gray-700 text-lg leading-relaxed mt-6"> 
                 Let's embark your tech journey together!!
